# simple-iceberg-table-create-readback

./: .gitignore  README.md  aws_create.py  local_create.py  local_query.py  pyproject.toml  query_local_iceberg_table.py
