[project]
name = "polars-apache-iceberg-create-readback"
version = "0.1"
description = "Demonstrate using polars, pyiceberg, and boringcatalog to create and query an Apache Iceberg table"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boringcatalog>=0.4.0",
    "pyiceberg[polars]>=0.10.0",
]
